# ashmaize-eval

./: .dockerignore  .gitignore  LICENSE  README.md  config.yaml  index.html  pricing.json
container/: Dockerfile  check_offline.sh  cliproxy-config.yaml  cliproxy-redacted-thinking.patch  cliproxy.Dockerfile  zai-bridge-patch.js  zai-bridge.Dockerfile
docs/: ashmaize-explained.md
examples/: mock_impl.py
grader/: go.mod  main.go
harness/: go.mod  main.go  main_test.go
harness/prompts/: ashmaize_codex.txt  workspace_agents.md
oracle/: Cargo.toml  README.md
oracle/src/: main.rs
scenarios/: README.md
scenarios/adversarial/: adversarial-0001-unknown-op.json  adversarial-0002-missing-preimage.json  adversarial-0003-malformed-json.json  adversarial-0004-nonhex.json  adversarial-0005-odd-hex.json  adversarial-0006-uppercase-hex.json  adversarial-0007-negative-rom-size.json  adversarial-0008-zero-rom-size.json  adversarial-0009-non-multiple-rom-size.json  adversarial-0010-oversized-rom-size.json  adversarial-0011-nb-loops-too-small.json  adversarial-0012-nb-instrs-too-small.json  adversarial-0013-div-zero-no-special1.json  adversarial-0014-rotate-shift-too-large.json  adversarial-0015-unsupported-instr.json  (+22 more)
scorecards/: claude-opus-4-8-max.json  claude-sonnet-4-6-low.json  claude-sonnet-5-low.json  claude-sonnet-5-medium.json  codex-gpt-5-4-mini-low.json  codex-gpt-5-4-mini-xhigh.json  codex-gpt-5-5-xhigh.json  gemini-3-5-flash-low.json  glm-4-7-medium.json  glm-5-1-medium.json  glm-5-2-medium.json
spec/: ABI.md  ASHMAIZE.md  TASK.md
(+63 files in other folders)
